--- a/Corvus-Proyecto.csproj
+++ b/Corvus-Proyecto.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="GUI\Pizzarron\" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
